<resources>
    <string name="app_name">YoutubeApi</string>
    <string name="playlist">playlist</string>
    <string name="video_name">Video Name</string>
    <string name="videos_amount">Videos amount</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="video_series">%s video series</string>
    <string name="_04_00">04:00</string>
    <string name="back">Back</string>
    <string name="playlist_name">Playlist name</string>
    <string name="description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
</resources>