<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_playlist"
        android:layout_width="160dp"
        android:layout_height="90dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view_dark_playlist"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="#99000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view_dark_playlist"
                app:layout_constraintTop_toTopOf="@+id/view_dark_playlist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_video_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fjalla_one"
            android:text="@string/video_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="30dp"/>

        <TextView
            android:id="@+id/tv_videos_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos_amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>