<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.video.VideoActivity">

    <include
        android:id="@+id/back_to_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/back_to_playlist_layout"/>

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_video_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_name"
        android:textSize="24sp"
        android:fontFamily="@font/fjalla_one"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"/>

    <FrameLayout
        android:id="@+id/download_view"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_download_btn"/>

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@color/red"
            app:fabCustomSize="30dp"
            app:tint = "@color/white"
            android:src="@drawable/download_img"
            android:scaleType="center"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_video_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            tools:text="@tools:sample/lorem/random"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"/>

    </ScrollView>

</LinearLayout>