<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlist_detail.PlaylistDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/container">

        <include
            android:id="@+id/back_to_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/back_to_playlist_layout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_grey"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll"
                    android:background="@color/very_light_grey">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_anchor="@+id/appBarLayout"
                        app:layout_anchorGravity="bottom|center"
                        app:layout_collapseMode="pin"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="24dp">

                        <TextView
                            android:id="@+id/tv_playlist_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/playlist_name"
                            android:fontFamily="@font/fjalla_one"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="24sp"/>

                        <TextView
                            android:id="@+id/tv_playlist_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <TextView
                    android:id="@+id/tv_videos_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos_amount"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPlaylistItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_playlist_items" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_play"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:layout_anchor="@id/appBarLayout"
                app:layout_anchorGravity="bottom|end"
                android:src="@drawable/play_arrow_white"
                app:backgroundTint="@color/red"
                app:tint = "@color/white"
                tools:ignore="ContentDescription"
                android:layout_marginEnd="16dp"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

    <include
        android:id="@+id/no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/no_internet_connection_layout"
        android:visibility="gone"/>

</FrameLayout>